--- a/app/views/pwa/manifest.json.erb
+++ b/app/views/pwa/manifest.json.erb
@@ -1,5 +1,5 @@
 {
-  "name": "Demodx",
+  "name": "Demo Developer Experience",
   "icons": [
     {
       "src": "/icon.png",
@@ -16,7 +16,7 @@
   "start_url": "/",
   "display": "standalone",
   "scope": "/",
-  "description": "Demodx.",
-  "theme_color": "red",
-  "background_color": "red"
+  "description": "Demo Developer Experience.",
+  "theme_color": "violet",
+  "background_color": "violet"
 }
