--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -5,6 +5,9 @@
       <li>
         <a href="<%= destroy_user_session_path %>" data-turbo-method="delete">Sign Out</a>
       </li>
+      <li>
+        <a href="<%= api_keys_path %>">API Keys</a>
+      </li>
     <% else %>
       <li>
         <a href="<%= new_user_session_path %>">Sign In</a>
