Fix API Keys copy

--- a/app/views/api_keys/index.html.erb
+++ b/app/views/api_keys/index.html.erb
@@ -8,9 +8,9 @@
   <% @api_keys.each do |api_key| %>
     <%= render api_key %>
     <p>
-      <%= link_to "Show this api key", api_key %>
+      <%= link_to "Show this API key", api_key %>
     </p>
   <% end %>
 </div>
 
-<%= link_to "New api key", new_api_key_path %>
+<%= link_to "New API key", new_api_key_path %>
