--- a/app/views/api_keys/edit.html.erb
+++ b/app/views/api_keys/edit.html.erb
@@ -1,12 +1,12 @@
-<% content_for :title, "Editing api key" %>
+<% content_for :title, "Editing API key" %>
 
-<h1>Editing api key</h1>
+<h1>Editing API key</h1>
 
 <%= render "form", api_key: @api_key %>
 
 <br>
 
 <div>
-  <%= link_to "Show this api key", @api_key %> |
-  <%= link_to "Back to api keys", api_keys_path %>
+  <%= link_to "Show this API key", @api_key %> |
+  <%= link_to "Back to API keys", api_keys_path %>
 </div>
