--- a/app/views/api_keys/new.html.erb
+++ b/app/views/api_keys/new.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "New api key" %>
+<% content_for :title, "New API key" %>
 
 <h1>New API Key</h1>
 
@@ -7,5 +7,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to api keys", api_keys_path %>
+  <%= link_to "Back to API keys", api_keys_path %>
 </div>
