--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,11 @@
 <%= render_layout "body" do %>
   <header>
+    <hgroup>
+      <h1><%= content_for(:title) || @page_title %></h1>
+      <% if subtitle = content_for(:subtitle) || @page_subtitle %>
+        <h2><%= subtitle %></h2>
+      <% end %>
+    </hgroup>
     <%= render "layouts/nav" %>
   </header>
   <main>
