--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,19 +1,21 @@
 <nav>
   <ul>
-    <li><a href="/">Docs</a></li>
+    <li>
+      <a href="/">Docs</a>
+    </li>
+    <li>
+      <a href="<%= api_keys_path %>">API Keys</a>
+    </li>
     <% if signed_in? %>
-      <li>
-        <a href="<%= api_keys_path %>">API Keys</a>
-      </li>
       <li>
         <a href="<%= destroy_user_session_path %>" data-turbo-method="delete">Sign Out</a>
       </li>
     <% else %>
       <li>
-        <a href="<%= new_user_session_path %>">Sign In</a>
+        <a href="<%= new_user_session_path %>">Log in</a>
       </li>
       <li>
-        <a href="<%= new_user_registration_path %>">Sign Up</a>
+        <a href="<%= new_user_registration_path %>">Sign up</a>
       </li>
     <% end %>
   </ul>
