--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,21 @@
     <%= yield %>
   </main>
   <footer>
+    <hr>
+
     <small>
-      This is a demo that shows how a SaaS can streamline their sign-up and setup process from multiple steps and pages of documentation into two steps with Teminalwire. <a href="https://github.com/terminalwire/demodx">Source Code</a> for this demo may be found on <a href="https://github.com/terminalwire/demodx">Github</a>.
+      <p>
+        This is a demo that shows how a SaaS can streamline their sign-up and setup process from multiple steps and pages of documentation into two steps with <a href="https://terminalwire.com">Teminalwire</a>.
+      <p>
+
+      <p>
+        If you'd like to setup a personalized demo, please reach out, <a href="https://terminalwire.com/human">talk to a human</a>, and we'll setup some time together.
+      <p>
+
+      <p>
+        <a href="https://github.com/terminalwire/demodx">Source Code</a> for this demo may be found on <a href="https://github.com/terminalwire/demodx">Github</a>.
+      </p>
+
     </small>
   </footer>
 <% end %>
